Require certain faimilies to contain certain styles

This is a workaround for 635932, so that Chrome will ignore certain font
families unless they contain the specified font styles. We start out
requiring that Helvetica and Open Sans contain the regular variant,
because in some cases they get installed only in specialized variants
which results in fonts incorrectly displaying bold or condensed.

BUG=635932

Review-Url: https://codereview.chromium.org/2259733002
Cr-Commit-Position: refs/heads/master@{#413323}

Former-commit-id: 0bf300d07fe226dc48da9cbfaa6d9ea36480f66d